SUMMARY Needs to have at least one dir configured to be able to add more. STEPS TO REPRODUCE 1. 2. 3. OBSERVED RESULT EXPECTED RESULT SOFTWARE/OS VERSIONS Windows: macOS: Linux/KDE Plasma: (available in About System) KDE Plasma Version: KDE Frameworks Version: Qt Version: ADDITIONAL INFORMATION
Git commit 9ae31c7b38692bf2b95e95426b173a03fb56860a by Dag Andersen. Committed on 26/02/2021 at 08:01. Pushed by danders into branch 'master'. Fix Bug 433637 - Cannot add first taskmodules directory FIXED-IN: 3.3.89 M +12 -6 src/libs/ui/kptmainprojectpanel.cpp https://invent.kde.org/office/calligraplan/commit/9ae31c7b38692bf2b95e95426b173a03fb56860a