Fix Bug 433637 - Cannot add first taskmodules directory

BUG: 433637
FIXED-IN: 3.3.89